# AnvikshaRuntimeEngine-ARE-

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  v1-masterprompt.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  security.yml
Docs/: RELEASE-v1.0.md  RELEASE-v1.1.md  index.md  v1docs.md
Docs/api/: capabilities.md  exceptions.md  runtime.md  server.md  types.md
Docs/dev/: architecture.md  contributing.md  rfcs.md
Docs/guide/: configuration.md  quickstart.md  server.md
Docs/rfc/: 0001-runtime-architecture.md  0002-Execution-Lifecycle.md  0003-Planner-Architecture.md  0004-Capability-Registry.md  0005-Execution-Engine.md  0006-Policy-Engine.md  0007-State-Manager.md  0008-Observability-&-Telemetry.md  0009-Plugin-SDK.md  0010-Public-Python-SDK.md
benchmarks/: benchmark_runtime.py
src/anviksha/: __init__.py  cli.py  config.py  evaluation.py  exceptions.py  types.py
src/anviksha/capabilities/: __init__.py  base.py  builtins.py  filesystem.py  http_client.py  llm.py  memory.py  python_exec.py  registry.py  retrieval.py
src/anviksha/execution/: __init__.py  engine.py
src/anviksha/observability/: __init__.py  events.py  otel.py
src/anviksha/planner/: __init__.py  default.py
src/anviksha/plugins/: __init__.py  discovery.py  sdk.py
src/anviksha/policy/: __init__.py  engine.py
src/anviksha/sdk/: __init__.py  runtime.py
src/anviksha/server/: __init__.py  app.py
src/anviksha/state/: __init__.py  manager.py  persistence.py
tests/: conftest.py  test_capabilities.py  test_cli.py  test_concurrency.py  test_policy.py  test_property.py  test_runtime.py  test_server.py
