[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "anviksha-runtime-engine"
version = "0.1.0"
description = "Anviksha Runtime Engine: adaptive AI execution runtime"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Anviksha Core Team" }]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
otel = ["opentelemetry-api>=1.25", "opentelemetry-sdk>=1.25"]
all = ["anviksha-runtime-engine[dev,otel]"]

[project.entry-points."anviksha.plugins"]
calculator = "anviksha.capabilities.builtins:CalculatorCapability"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src/anviksha"]
